<resources>
    <string name="app_name">Service Novigrad -G30</string>
    <string name="qui_etes_vous">Qui etes -vous?</string>
    <string name="adminiatrateur">Adminiatrateur</string>
    <string name="client">Client</string>
    <string name="employer">Employer</string>
    <string name="administrateur" />
    <string name="Administrateur">administrateur</string>
    <string name="connexion">Connexion</string>
    <string name="bienvenue_chers_administrateur">Bienvenue chers Administrateur</string>
    <string name="bienvenue_chers_Employer" />
    <string name="bienvenue_chers_employer">bienvenue chers Employer</string>
    <string name="inscription">Inscription</string>
    <string name="Bienvenue_chers_employer" />
    <string name="bienvenue_chers_employer1">Bienvenue chers Employer</string>
    <string name="bienvenue_chers_client">Bienvenue chers Client</string>
    <string name="retour">Retour</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="pas_encore_de_compte">Pas encore de compte ?</string>
    <string name="nom">Nom</string>
    <string name="adresse">Adresse</string>
    <string name="annee">Annee</string>
    <string name="prenom">Prenom</string>
    <string name="coordonnees">Coordonnees</string>
    <string name="mois">Mois</string>
    <string name="jour">Jour</string>
    <string name="province">Province</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="carte_sante">Carte sante</string>
    <string name="fermeture">Fermeture</string>
    <string name="heures_d_ouverture">Heures d\'ouverture</string>
    <string name="nom_de_la_succursale">Nom de la Succursale</string>
    <string name="ouverture">Ouverture</string>
    <string name="services_offerts">Services Offerts</string>
    <string name="piece_d_identite_avec_photo">Piece d\'identite avec photo</string>
    <string name="permis_de_conduire">Permis de conduire</string>
    <string name="bienvenu_dans_votre_compte_client">Bienvenu dans votre compte client !</string>
    <string name="bienvenue_dans_votre_compte_client">Bienvenue dans votre compte client !</string>
    <string name="bienvenue_dans_votre_compte_administrateur">Bienvenue dans votre compte Administrateur !</string>
    <string name="bienvenue_dans_votre_compte_employer">Bienvenue dans votre compte Employer</string>
    <string name="nom_d_utilisateur1">Nom d\'utilisateur</string>
    <string name="retour_au_menu_principal">Retour au menu principal</string>
    <string name="password">Mot de Passe</string>
    <string name="sexe">Sexe</string>
    <string name="mot_de_passe2">Mot de Passe</string>
    <string name="le_nom_d_utilisateur_est_admin">Le nom d\'utilisateur est : admin</string>
    <string name="le_mot_de_passe_est_password123">Le mot de passe est : password123</string>
</resources>